--- a/.github/workflows/Test_GS.yml
+++ b/.github/workflows/Test_GS.yml
@@ -2,7 +2,7 @@ name: Test GS
 
 on:
  push:
- branches: [ "main" ]
+  branches: [ "main" ]
  #pull_request:
  #branches: [ "main" ]
 
@@ -10,8 +10,11 @@ on:
 jobs:
  build:
    runs-on: ubuntu-latest
-   strategy:
-     fail-fast: false
-     matrix:
-     python-version: ["3.11"]
-# continued...
+   steps:
+       - name: Compile exe file
+         run:
+           cd yxy_test/build_dir
+           cmake ..
+           make
+           ./gs_test
+
