--- a/.github/workflows/Test_GS.yml
+++ b/.github/workflows/Test_GS.yml
@@ -11,14 +11,15 @@ jobs:
  build:
    runs-on: ubuntu-latest
    steps:
-       - name: Compile exe file
-         run: cd ./yxy_test/build_dir
-       - name: Compile exe file
-         run: cmake ..
-       - name: Compile exe file
-         run: make
-       - name: Compile exe file
-         run: ./gs_test
+    - uses: actions/checkout@v3
+    - name: Compile exe file
+      run: cd ./yxy_test/build_dir
+    - name: Compile exe file
+      run: cmake ..
+    - name: Compile exe file
+      run: make
+    - name: Compile exe file
+      run: ./gs_test
            
            
            
