--- a/.github/workflows/Test_GS.yml
+++ b/.github/workflows/Test_GS.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Compile exe file
       working-directory: /yxy_test/build_dir
-      run: cmake ..
+      run: cmake /yxy_test
     - name: Compile exe file
       working-directory: /yxy_test/build_dir
       run: make
