--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-# CMake 最低版本号要求
+# CMake Minimum Version Number Requirements
 cmake_minimum_required(VERSION 3.10)
 
-# 项目信息
+# Project information
 project (test_gs)
 
-# 指定生成目标
+# Specify the generation target
 add_executable(gs_test gs_test.cpp acutest.h)
