--- a/.github/workflows/CMake.yml
+++ b/.github/workflows/CMake.yml
@@ -4,9 +4,9 @@ name: CMake on multiple platforms
 
 on:
   push:
-    branches: main
-  #pull_request:
-    #branches: main
+    branches: [ $default-branch ]
+  pull_request:
+    branches: [ $default-branch ]
 
 jobs:
   build:
