--- a/.github/workflows/CMake.yml
+++ b/.github/workflows/CMake.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Configure and Build
       working-directory: ${{ github.workspace }}
       run: |
-        mkdir build
+        #mkdir build
         cd build
         cmake ..
         make
