--- a/.github/workflows/CMake_Build_and_Test.yml
+++ b/.github/workflows/CMake_Build_and_Test.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Configure and Build
       working-directory: ${{ github.workspace }}
       run: |
+        mkdir build
         cd build
         cmake ..
         make
